[package]
name = "webassembly-crypto-example"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
description = "Examples of WebCrypto from WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1"
js-sys = { path = '../wasm-bindgen/crates/js-sys' }
wasm-bindgen = { path = '../wasm-bindgen' }
wasm-bindgen-futures = { path = '../wasm-bindgen/crates/futures' }
multihash = "*"
# activitystreams-types = "0.2"
web-sys = { path = '../wasm-bindgen/crates/web-sys' }
serde = "*"
serde_derive = "*"
serde_json = "*"

[profile.release]
lto = true
[profile.dev]
lto = true